--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -102,15 +102,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mb-5 mb-lg-0">
-                    <div class="newsletter">
-                        <h3 class="footer-heading">Contact</h3>
-                        <p class="footer-text">Submit your email to connect with us</p>
-                        <form class="newsletter-form">
-                            <div class="input-group">
-                                <input type="email" class="form-control" placeholder="Your email address" required>
-                                <button type="submit" class="btn btn-dark">SUBMIT</button>
-                            </div>
-                        </form>
+                    
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -123,9 +115,8 @@
                             <h4 class="footer-heading">LINKS</h4>
                             <ul class="footer-links">
                                 <li><a href="#">About Us</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Shipping Policy</a></li>
-                                <li><a href="#">Business</a></li>
+                                <li><a href="contact-us.html">Contact</a></li>
+                               
                             </ul>
                         </div>
                         <div class="col-md-4">
