--- a/html/cart.html
+++ b/html/cart.html
@@ -97,9 +97,8 @@
                             <h4 class="footer-heading">LINKS</h4>
                             <ul class="footer-links">
                                 <li><a href="#">About Us</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Shipping Policy</a></li>
-                                <li><a href="#">Business</a></li>
+                                <li><a href="contact-us.html">Contact</a></li>
+                              
                             </ul>
                         </div>
                         <div class="col-md-4">
