--- a/html/checkout.html
+++ b/html/checkout.html
@@ -5,151 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout - SleekWears</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="../index.html">SLEEKWEARS</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> Cart</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<div class="container checkout-container">
+    <h2 class="text-center mb-4">Checkout</h2>
 
     <!-- Checkout Form -->
-    <div class="container checkout-container">
-        <h2 class="text-center mb-4">Checkout</h2>
-
-        <!-- Personal Details Section -->
-        <div class="form-section">
-            <h3 class="form-heading">Personal Details</h3>
-            <form>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label for="firstName" class="form-label">First Name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="John" required>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label for="lastName" class="form-label">Last Name</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="Pork" required>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" placeholder="jp@gmail.com" required>
-                </div>
-            </form>
+    <form action="../php/submit_checkout.php" method="post">
+        <!-- Personal Details -->
+        <div class="mb-3">
+            <label for="firstName" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="firstName" name="firstName" required>
+        </div>
+        <div class="mb-3">
+            <label for="lastName" class="form-label">Last Name</label>
+            <input type="text" class="form-control" id="lastName" name="lastName" required>
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="email" name="email" required>
         </div>
 
-        <!-- Shipping Address Section -->
-        <div class="form-section">
-            <h3 class="form-heading">Shipping Address</h3>
-            <form>
-                <div class="mb-3">
-                    <label for="address" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="address" placeholder="123 Street Name" required>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label for="city" class="form-label">City</label>
-                            <input type="text" class="form-control" id="city" placeholder="Toronto" required>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label for="zipCode" class="form-label">Zip Code</label>
-                            <input type="text" class="form-control" id="zipCode" placeholder="L5R" required>
-                        </div>
-                    </div>
-                </div>
-            </form>
+        <!-- Shipping Address -->
+        <div class="mb-3">
+            <label for="address" class="form-label">Address</label>
+            <input type="text" class="form-control" id="address" name="address" required>
+        </div>
+        <div class="mb-3">
+            <label for="city" class="form-label">City</label>
+            <input type="text" class="form-control" id="city" name="city" required>
+        </div>
+        <div class="mb-3">
+            <label for="zipCode" class="form-label">Zip Code</label>
+            <input type="text" class="form-control" id="zipCode" name="zipCode" required>
         </div>
 
-        <!-- Payment Details Section -->
-        <div class="form-section">
-            <h3 class="form-heading">Payment Details</h3>
-            <form>
-                <div class="mb-3">
-                    <label for="cardName" class="form-label">Cardholder's Name</label>
-                    <input type="text" class="form-control" id="cardName" placeholder="John Pork" required>
-                </div>
-                <div class="mb-3">
-                    <label for="cardNumber" class="form-label">Card Number</label>
-                    <input type="text" class="form-control" id="cardNumber" placeholder="1234 5678 9876 5432" required>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label for="expDate" class="form-label">Expiration Date</label>
-                            <input type="month" class="form-control" id="expDate" required>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label for="cvv" class="form-label">CVV</label>
-                            <input type="text" class="form-control" id="cvv" placeholder="123" required>
-                        </div>
-                    </div>
-                </div>
-            </form>
+        <!-- Payment Details -->
+        <div class="mb-3">
+            <label for="cardName" class="form-label">Cardholder's Name</label>
+            <input type="text" class="form-control" id="cardName" name="cardName" required>
+        </div>
+        <div class="mb-3">
+            <label for="cardNumber" class="form-label">Card Number</label>
+            <input type="text" class="form-control" id="cardNumber" name="cardNumber" required>
+        </div>
+        <div class="mb-3">
+            <label for="expDate" class="form-label">Expiration Date</label>
+            <input type="month" class="form-control" id="expDate" name="expDate" required>
+        </div>
+        <div class="mb-3">
+            <label for="cvv" class="form-label">CVV</label>
+            <input type="text" class="form-control" id="cvv" name="cvv" required>
         </div>
 
-        <!-- Payment Methods Section -->
-        <div class="form-section">
-            <h3 class="form-heading">Select Payment Method</h3>
-            <div class="payment-methods">
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="paymentMethod" id="visa" value="Visa" checked>
-                    <label class="form-check-label" for="visa">
-                        Visa
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="paymentMethod" id="mastercard" value="MasterCard">
-                    <label class="form-check-label" for="mastercard">
-                        MasterCard
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="paymentMethod" id="paypal" value="PayPal">
-                    <label class="form-check-label" for="paypal">
-                        PayPal
-                    </label>
-                </div>
+        <!-- Payment Method -->
+        <div class="mb-3">
+            <label class="form-label">Select Payment Method</label>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" name="paymentMethod" value="Visa" checked>
+                <label class="form-check-label">Visa</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" name="paymentMethod" value="MasterCard">
+                <label class="form-check-label">MasterCard</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" name="paymentMethod" value="PayPal">
+                <label class="form-check-label">PayPal</label>
             </div>
         </div>
 
-        <!-- Order Summary -->
-        <div class="card-summary">
-            <h4>Order Summary</h4>
-            <p>Subtotal: <span id="subtotal">$0.00</span></p>
-            <p>Shipping: <span id="shipping">$5.00</span></p>
-            <p>Tax (10%): <span id="tax">$0.00</span></p>
-            <p class="total-price">Total: $<span id="total-amount">0.00</span></p> <!-- Total amount is here -->
-        </div>
+        <!-- Submit Button -->
+        <button type="submit" class="btn btn-primary">Complete Purchase</button>
+    </form>
+</div>
 
-        <!-- Checkout Button -->
-        <button class="btn-custom">Complete Purchase</button>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
